--- a/_publications/2019-05-29_sim_sacc.md
+++ b/_publications/2019-05-29_sim_sacc.md
@@ -11,6 +11,8 @@ sidebar:
     text: "29 May 2019, Volume 39, Issue 22, Pages 4312-4322"
 ---
 
+### Benjamin Sivyer, Alexander Tomlinson, and W. Rowland Taylor
+
 Two types of mammalian direction-selective ganglion cells (DSGCs), ON and ONOFF, operate over different speed ranges. 
 The directional axes of the ON-DSGCs are thought to align with the axes of the vestibular system and provide 
 sensitivity at rotational velocities that are too slow to activate the semicircular canals. ONOFF-DSGCs respond to 
